[gd_scene load_steps=10 format=3 uid="uid://dcu6fa0fbv7on"]

[ext_resource type="Script" path="res://scripts/npc_pohyblivy.gd" id="1_kmitb"]
[ext_resource type="Texture2D" uid="uid://c6g8mms46wfis" path="res://images/NPC/npc-nadraziIII.png" id="2_3a2vy"]
[ext_resource type="PackedScene" uid="uid://cbfwrf4gw30sa" path="res://scenes/killzone.tscn" id="3_6by8g"]
[ext_resource type="AudioStream" uid="uid://qctp82kjd7ph" path="res://Sounds/npc.mp3" id="4_glq2b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f6nib"]
atlas = ExtResource("2_3a2vy")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1t55"]
atlas = ExtResource("2_3a2vy")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihgx5"]
atlas = ExtResource("2_3a2vy")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_moshr"]
atlas = ExtResource("2_3a2vy")
region = Rect2(150, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_rbcpt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6nib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1t55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihgx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moshr")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[node name="enemy_knight" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
script = ExtResource("1_kmitb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(1.638, 1.638)
sprite_frames = SubResource("SpriteFrames_rbcpt")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.364416
flip_h = true

[node name="killzone" parent="." instance=ExtResource("3_6by8g")]

[node name="raycast_left" type="RayCast2D" parent="."]
scale = Vector2(0.907384, 1)
target_position = Vector2(-13.2248, 12)

[node name="raycast_right" type="RayCast2D" parent="."]
scale = Vector2(0.907384, 1)
target_position = Vector2(13.2248, 12)

[node name="floor_raycast_right" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 19)

[node name="floor_raycast_left" type="RayCast2D" parent="."]
position = Vector2(-12, 0)
target_position = Vector2(0, 19)

[node name="npc" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_glq2b")
autoplay = true

[connection signal="finished" from="npc" to="." method="_on_npc_finished"]
